--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "@angular/service-worker": "^15.0.0",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.5.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
